# email-triage-openenv

./: Dockerfile  README.md  email_triage_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: claude-context.md  project-guide.md
server/: app.py
tasks/: __init__.py  data.py  graders.py
