[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage"
version = "1.0.0"
description = "Real-world email triage environment"
authors = [
    {name = "OpenEnv Submission"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "tasks"]
py-modules = ["email_triage_env"]
